POR/RefEdge/src/objects/Reference_Lead__c.object
<CustomObject>
    <description>Custom Object to track Leads for the Reference Program(Bound 8)</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Leads</relationshipLabel>
        <relationshipName>Reference_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Timeframe__c</fullName>
        <label>Follow Up Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Notification_Date__c</fullName>
        <description>Indicates the date that the FIRST notification was sent to the Reference Lead Owner</description>
        <inlineHelpText>Indicates the date that the FIRST notification was sent to the Reference Lead Owner</inlineHelpText>
        <label>Initial Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the FIRST notification was sent to the Reference Lead Owner</description>
        <inlineHelpText>Indicates that the FIRST notification was sent to the Reference Lead Owner</inlineHelpText>
        <label>Initial Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Response_Date__c</fullName>
        <description>Indicates when to set the Reference Lead status to No Response.</description>
        <inlineHelpText>Indicates when to set the Reference Lead status to No Response.</inlineHelpText>
        <label>No Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nominated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nominated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Nomination that was created when this lead was converted to a Nomination</description>
        <inlineHelpText>Indicates the Nomination that was created when this lead was converted to a Nomination</inlineHelpText>
        <label>Nomination</label>
        <referenceTo>Nomination__c</referenceTo>
        <relationshipLabel>Reference Leads</relationshipLabel>
        <relationshipName>Reference_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Response__c</fullName>
        <description>Indicates the response submitted from the VF page.</description>
        <inlineHelpText>Indicates the response submitted from the VF page.</inlineHelpText>
        <label>Notification Response</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, this is a very happy account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check back with me later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don’t know, I’m not the right person to ask</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Info__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_From_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Created automatically by Reference Lead Finder when an Opportunity meeting the threshold criteria is successfully closed.</inlineHelpText>
        <label>Created by Reference Lead Finder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Include_in_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this record will be included in a Reference Prospect campaign</inlineHelpText>
        <label>Include in Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Lead_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Lead Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Leads</relationshipLabel>
        <relationshipName>Reference_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Lead_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Lead Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reference Leads</relationshipLabel>
        <relationshipName>Reference_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is typically the Opportunity Owner but could be replaced with another name if the Opportunity Owner is no longer the correct contact</description>
        <inlineHelpText>This is typically the Opportunity Owner but could be replaced with another name if the Opportunity Owner is no longer the correct contact</inlineHelpText>
        <label>Reference Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Lead_Status__c</fullName>
        <description>Indicates where this Reference Lead is in the process</description>
        <inlineHelpText>Indicates where this Reference Lead is in the process</inlineHelpText>
        <label>Reference Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initial notification sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to Nomination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to Program Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Updates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Reference Profile that was created when this lead was converted to a Reference Program Member</description>
        <inlineHelpText>Indicates the Reference Profile that was created when this lead was converted to a Reference Program Member</inlineHelpText>
        <label>Reference Profile</label>
        <referenceTo>Reference_Basic_Information__c</referenceTo>
        <relationshipLabel>Reference Leads</relationshipLabel>
        <relationshipName>Reference_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Program_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this lead was converted to a Reference Program Member</description>
        <inlineHelpText>Indicates that this lead was converted to a Reference Program Member</inlineHelpText>
        <label>Reference Program Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <inlineHelpText>Indicates the date that the reminder notification will be sent to the Reference Lead Owner.</inlineHelpText>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a response of some kind has been submitted from the VF page</description>
        <inlineHelpText>Indicates that a response of some kind has been submitted from the VF page</inlineHelpText>
        <label>Response Received</label>
        <type>Checkbox</type>
    </fields>
    <label>Reference Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reference_Lead_Account__c</columns>
        <columns>Reference_Lead_Opportunity__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Reference_Lead_Status__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>Nomination__c</columns>
        <columns>Reference_Profile__c</columns>
        <columns>Reference_Program_Member__c</columns>
        <columns>Contact__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Response_Received__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reference_Prospector_Campaign_Members</fullName>
        <columns>Reference_Lead_Account__c</columns>
        <columns>Reference_Lead_Owner__c</columns>
        <columns>Ref_Lead_Include_in_Campaign__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ref_Lead_From_Opportunity__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Reference_Lead_Status__c</field>
            <operation>equals</operation>
            <value>Request Pending</value>
        </filters>
        <filters>
            <field>Ref_Lead_Include_in_Campaign__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reference Prospector Campaign Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reference_Prospector_Campaign_Responses</fullName>
        <columns>Reference_Lead_Account__c</columns>
        <columns>Reference_Lead_Owner__c</columns>
        <columns>Ref_Lead_Include_in_Campaign__c</columns>
        <columns>Reference_Lead_Status__c</columns>
        <columns>Ref_Lead_Campaign_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ref_Lead_From_Opportunity__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Ref_Lead_Include_in_Campaign__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Initial_Notification_Sent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reference Prospector Campaign Responses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reference_Prospector_Leads</fullName>
        <columns>Reference_Lead_Account__c</columns>
        <columns>Reference_Lead_Owner__c</columns>
        <columns>Ref_Lead_Include_in_Campaign__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ref_Lead_From_Opportunity__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Reference_Lead_Status__c</field>
            <operation>equals</operation>
            <value>Request Pending</value>
        </filters>
        <label>Reference Prospector Leads</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>